--- a/task4.html
+++ b/task4.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <p> Enter your Text</p>
-  <input type="number" id="text" oninput="intoBinary()">
+  <input type="number" id="text" oninput="count()">
 
   
   <script>
@@ -18,5 +18,6 @@
         var temp= document.getElementById("text").value;
         console.log(temp.length);
     }
+    </script>
   </body>
 </html>
